--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "swiper": "9.4.1"
   },
   "devDependencies": {
     "autoprefixer": "latest",
