--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "swiper": "9.4.1"
   },
